--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,12 @@
 @import 'tailwindcss';
+
+html,
+body {
+  height: 100dvh;
+}
+
+#root {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
